crates/reinhardt-pages/tests/ui/style/fail/arithmetic_mismatch.rs
use reinhardt_pages::{style_def};

#[style_def]
static STYLES: CardStyles = style! { .card { width: 1px + 1s; } };
fn main() {}
